MMF for one player

--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
             <div id="main" data-role="content">
                 <div class="ui-grid-a" id="player1">
                     <h2>Player 1 Life</h2>
-                    <h1>20</h1>
-                    
+                    <h1 id="player1life">20</h1>
+                    <button id="player1up">+</button>
+                    <button id="player1down">-</button>
                 </div>
-
-
             </div>
-
         </div>
     </body>
 </html>
