--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
             <div id="header" data-role="header">
                 <h1>M:TG Life Counter</h1>
             </div>
-            <div id="main" data-role="content">
-                <div class="ui-grid-a" id="player1">
-                    <h2>Player 1 Life</h2>
+            <div id="main" data-role="content" class="ui-grid-a">
+                <div class="ui-block-a" id="player1">
+                    <h3>Player 1 Life</h3>
                     <h1 id="player1life">20</h1>
                     <button id="player1up">+</button>
                     <button id="player1down">-</button>
+                </div>
+                <div class="ui-block-b" id="player2">
+                    <h3>Player 2 Life</h3>
+                    <h1 id="player2life">20</h1>
+                    <button id="player2up">+</button>
+                    <button id="player2down">-</button>
                 </div>
             </div>
         </div>
