--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
         <script type="text/javascript" src="lib/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="lib/jquery.mobile-1.3.2.js"></script>
         <script type="text/javascript" src="src/counter.js"></script>
-        <title>M:TG Life Counter</title>
+        <title>Magic: The Gathering Life Counter</title>
     </head>
     <body>
         <div id="root" data-role="page">
             <div id="header" data-role="header">
-                <h1>M:TG Life Counter</h1>
+                <h1>Magic: The Gathering Life Counter</h1>
             </div>
             <div id="main" data-role="content" class="ui-grid-a">
                 <div class="ui-block-a" id="player1">
                     <h3>Player 1 Life</h3>
-                    <h1 id="player1life">20</h1>
+                    <h1 style="padding: 0px" id="player1life">20</h1>
                     <button id="player1up">+</button>
                     <button id="player1down">-</button>
                 </div>
                 <div class="ui-block-b" id="player2">
                     <h3>Player 2 Life</h3>
-                    <h1 id="player2life">20</h1>
+                    <h1 style="padding: 0px" id="player2life">20</h1>
                     <button id="player2up">+</button>
                     <button id="player2down">-</button>
                 </div>
