made the margins around the life totals not be crazy big. this was cutting off the minus button when viewing the page on a mobile device.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div id="main" data-role="content" class="ui-grid-a">
                 <div class="ui-block-a" id="player1">
                     <h3>Player 1 Life</h3>
-                    <h1 style="padding: 0px" id="player1life">20</h1>
+                    <h1 style="margin: 0px" id="player1life">20</h1>
                     <button id="player1up">+</button>
                     <button id="player1down">-</button>
                 </div>
                 <div class="ui-block-b" id="player2">
                     <h3>Player 2 Life</h3>
-                    <h1 style="padding: 0px" id="player2life">20</h1>
+                    <h1 style="margin: 0px" id="player2life">20</h1>
                     <button id="player2up">+</button>
                     <button id="player2down">-</button>
                 </div>
